[package]
authors = ["AriPerkkio <ari.perkkio@gmail.com>"]
edition = "2021"
name = "rollup-plugin-local-import"
version = "0.0.1"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"

swc_core = { version = "0.26.0", features = [
    "__base",
    "__common",
    "__ecma",
    "__ecma_transforms",
    "__visit",
    "common_tty",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
